--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -5,7 +5,7 @@
 // all less variables could be found in
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 // font
 @font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -16,12 +16,12 @@
 @border-radius-base: 6px;
 
 // colors
-@primary-color: #67be23;
+@primary-color: #3ecf8e;
 @error-color: #fa541c;
 @text-color: #626262;
 
 // sider
-@layout-sider-background: #2a132e;
+@layout-sider-background: #242436;
 @menu-bg: transparent;
 @menu-item-color: #fff;
 @menu-highlight-color: #fff;
