--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -77,3 +77,13 @@
 .ant-menu-tree-arrow::after {
   transform: rotate(-45deg) translateY(2.5px);
 }
+
+.canvas-tile {
+  padding: 6px;
+  border: 1px solid #f5f5f5;
+  border-radius: 4px;
+}
+
+.canvas-tile:hover {
+  box-shadow: 4px 8px 16px 2px rgba(42, 42, 66, 0.25);
+}
