--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -78,6 +78,14 @@
   transform: rotate(-45deg) translateY(2.5px);
 }
 
+.page-shadow {
+  padding: 36px;
+  background-color: #fff;
+  border: 1px solid #f5f5f5;
+  border-radius: 16px;
+  box-shadow: 4px 8px 16px rgba(42, 42, 66, 0.25);
+}
+
 .canvas-tile {
   padding: 6px;
   border: 1px solid #f5f5f5;
