Add style for CanvasShow page

--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -95,3 +95,12 @@
 .canvas-tile:hover {
   box-shadow: 4px 8px 16px 2px rgba(42, 42, 66, 0.25);
 }
+
+.w-full {
+  width: 100%;
+}
+
+.h-90 {
+  height: 90vh;
+  max-height: 100vh;
+}
